Fix #221 Clean up settings dialog Fix #343 Notifications cannot be disabled

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -450,21 +450,23 @@ settings.general=General
 settings.general.language=Language
 settings.general.rememberLastTab=Remember my last tab
 settings.chat=Chat
-settings.chat.maxMessages=Maximum number of messages to buffer
+settings.chat.maxMessages=Message history size
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
 settings.chat.colorMode=Chat color mode
 settings.chat.colorMode.default=Default: Use default colors for all users
-settings.chat.colorMode.custom=Custom: Define custom colors for single users
+settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
 settings.chat.colorMode.random=Random: Every user has an unique, random color
-settings.chat.miscellaneous=Miscellaneous options
+settings.chat.foes=Foes
 settings.chat.hideFoe=Hide foe messages
 settings.notifications=Notifications
-settings.notifications.reset=Reset dismissed notifications
-settings.notifications.toasts=Toasts
-settings.notifications.enableToasts=Enable toasts
+settings.notifications.enableNotifications=Enable notifications
 settings.notifications.toastPosition=Toast position
+settings.notifications.toastPosition.topLeft=Top left
+settings.notifications.toastPosition.topRight=Top right
+settings.notifications.toastPosition.bottomRight=Bottom right
+settings.notifications.toastPosition.bottomLeft=Bottom left
 settings.notifications.toastScreen=Screen
 settings.notifications.displayToast=Display toast
 settings.notifications.playSound=Play sound
@@ -486,11 +488,13 @@ settings.notifications.friendOnline=Friend online
 settings.notifications.friendJoinsGame=Friend joins game
 settings.notifications.friendPlaysGame=Friend plays game
 settings.notifications.friendOffline=Friend offline
+settings.screenFormat=Screen {0,number,#}
 
 urlPreviewDescription={0} ({1})
 
 achievement.unlockedTitle=Achievement unlocked!
 friend.nowOnlineNotification.title={0} is now online
 friend.nowOnlineNotification.action=Click here to start a conversation.
+friend.nowOfflineNotification.title={0} is now offline
 friend.joinedGameNotification.title={0} joined {1}
 friend.joinedGameNotification.action=Click here to join as well.
