Fix #412 rating over time

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -403,8 +403,8 @@ userInfo.gamesPlayed=Games played
 userInfo.wins=Wins
 userInfo.losses=Losses
 userInfo.ratingOverTime=Rating over time
-userInfo.ratingOverTime.last3Months=Last 3 months
-userInfo.ratingOverTime.lastYear=Last year
+userInfo.ratingHistory.1v1=1v1
+userInfo.ratingHistory.global=Global
 userInfo.achievements=Achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
