Improve mod detail (reviews & version)
Fixes #406
Fixes #415

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -325,6 +325,14 @@ mapVault.uninstall=Uninstall
 
 mod.description=Description
 mod.comments=Comments
+mod.detail.reviews=Reviews
+mod.detail.moreInfo=More information
+mod.detail.updated=Updated
+mod.detail.size=Size
+mod.detail.installations=Installations
+mod.detail.version=Version
+mod.detail.dependencies=Dependencies
+
 map.author=Author
 map.unknownAuthor=Unknown author
 map.name=Name
