New Account tab in Settings with function to change your password

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -472,6 +472,7 @@ settings.notifications.ranked1v1=Ranked 1v1 available
 settings.sounds=Sounds
 settings.sounds.enable=Enable sounds
 settings.fa.title=Forged Alliance Forever
+settings.fa.gameConfiguration=Game configuration
 settings.fa.autoDownloadMaps=Download missing maps automatically
 settings.fa.gamePort=Game port
 settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
@@ -486,6 +487,23 @@ settings.notifications.friendJoinsGame=Friend joins game
 settings.notifications.friendPlaysGame=Friend plays game
 settings.notifications.friendOffline=Friend offline
 settings.screenFormat=Screen {0,number,#}
+settings.account=Account
+settings.account.changePassword=Change Password
+settings.account.title=Change Password
+settings.account.currentPassword=Current Password
+settings.account.currentPassword.empty=The current password must not be empty.
+settings.account.newPassword=New Password
+settings.account.newPassword.empty=The new password must not be empty.
+settings.account.confirmPassword=Confirm Password
+settings.account.confirmPassword.mismatch=The new password and the confirmation do not match.
+settings.account.changePassword.changing=Your password is being changed.
+settings.account.changePassword.success=Your password was changed.
+settings.account.changePassword.error=Your password was not changed due to an error ({0}).
+settings.account.steamAccount=Steam Account Linking
+settings.account.steamAccount.prompt=You can link your steam account here.
+settings.account.steamAccount.linkToSteam=Link to steam
+settings.account.username=FAF Username
+settings.account.username.change=Change username
 
 urlPreviewDescription={0} ({1})
 
