Implements German and Language selection as well as TimeFormate selection

--- a/src/main/resources/i18n/Messages_de_DE.properties
+++ b/src/main/resources/i18n/Messages_de_DE.properties
@@ -442,8 +442,7 @@ daysAgo={0,number,#} days ago
 monthsAgo={0,number,#} months ago
 yearsAgo={0,number,#} years ago
 
-settings.chat.24= Enable military time
-settings.languages=Auto English German
+settings.languages=Auto Englisch Deutsch
 settings.windowTitle=Settings
 settings.general=General
 settings.general.language=Language
@@ -453,8 +452,6 @@ settings.chat.maxMessages=Message history size
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
-settings.chat.timeFormat= Time formating
-settings.chat.optionsForTime= Auto Military-Time 24h
 settings.chat.colorMode=Chat color mode
 settings.chat.colorMode.default=Default: Use default colors for all users
 settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
