Implements German and Language selection as well as TimeFormate selection fixes #240

--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -454,7 +454,7 @@ settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
 settings.chat.timeFormat= Time formating
-settings.chat.optionsForTime= Auto Military-Time 24h
+settings.chat.optionsForTime= Auto AM/PM 24h
 settings.chat.colorMode=Chat color mode
 settings.chat.colorMode.default=Default: Use default colors for all users
 settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
