--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -442,13 +442,16 @@ daysAgo={0,number,#} days ago
 monthsAgo={0,number,#} months ago
 yearsAgo={0,number,#} years ago
 
-settings.chat.24= Enable military time
+settings.chat.24=Enable military time
 settings.languages=Auto English German
+settings.languages.restart.title=You changed the language
+settings.languages.restart.message=A restart is needed\n click to close \n
 settings.windowTitle=Settings
 settings.general=General
 settings.general.language=Language
 settings.general.rememberLastTab=Remember my last tab
 settings.chat=Chat
+settings.language.restart=Restart
 settings.chat.maxMessages=Message history size
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
