--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -443,7 +443,7 @@ monthsAgo={0,number,#} months ago
 yearsAgo={0,number,#} years ago
 
 settings.chat.24=Enable military time
-settings.languages=Auto English German
+settings.languages=Auto English German Russian
 settings.languages.restart.title=You changed the language
 settings.languages.restart.message=A restart is needed\n click to close \n
 settings.windowTitle=Settings
