--- a/src/main/resources/i18n/Messages.properties
+++ b/src/main/resources/i18n/Messages.properties
@@ -22,6 +22,7 @@ menu.logOut=Log out
 menu.settings=Settings
 menu.help=Help
 
+main.clan=Clan
 main.community=Community
 main.community.hub=Hub
 main.community.news=News
