WIP Fix #182 User detail in private message

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -137,13 +137,22 @@ chat.filter.clan=Clan
 chat.filter.username=Username
 chat.filter.minRating=Min Rating
 chat.filter.maxRating=Max Rating
-chat.filter.gameStatus=Game Status
-chat.filter.gameStatus.playing=Playing
-chat.filter.gameStatus.lobby=In lobby
-chat.filter.gameStatus.none=None
 chat.operator=SYSTEM
 chat.privateMessage.playerLeft={0} is now offline
 chat.privateMessage.playerReconnect={0} is back online
+chat.privateMessage.gamestate.notInGame=Not in game
+chat.privateMessage.country=Country:
+chat.privateMessage.globalrating=Global rating:
+chat.privateMessage.leaderboardrating=Leaderboard rating:
+chat.privateMessage.ratingFormat={0,number,#} +/- {1,number,#}   ({2,number,#})
+chat.privateMessage.gamesPlayed=Games played:
+chat.privateMessage.game.players=Players:
+chat.privateMessage.game.playersFormat={0,number,#}/{1,number,#}
+chat.privateMessage.game.featuredMod=Featured mod:
+chat.privateMessage.game.host=Hosted by:
+chat.privateMessage.game.joinSpectateError.title=Error while starting game
+chat.privateMessage.game.joinSpectateError.text=Could not join/spectate game. Player isn't in game anymore!
+
 
 games.create=Create game
 games.create.minRating=Min.
@@ -185,6 +194,7 @@ game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
 game.cancel=Cancel
 game.host=Host
+game.spectate=Spectate
 game.tooltip.teamTitle=Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
@@ -195,6 +205,10 @@ game.start.couldNotStart=The game could not be started. See error details below.
 game.full=Game is full
 game.full.action=Click to open game
 game.mods.twoAndMore={0} and {1,number,#} more
+game.gameStatus=Game Status
+game.gameStatus.playing=Playing
+game.gameStatus.lobby=In lobby
+game.gameStatus.none=None
 game.id=ID
 game.time=When
 game.duration=Duration
