Fix language and time format Fixes #240 24h time Format Fixes #494 Language selection

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -411,7 +411,15 @@ monthAgo={0,number,#} month ago
 monthsAgo={0,number,#} months ago
 yearAgo={0,number,#} year ago
 yearsAgo={0,number,#} years ago
-
+settings.languages.restart.message=You changed the language.\nThis requires a restart.
+settings.languages.restart=Restart
+settings.languages.system=Auto
+settings.languages.german=German
+settings.languages.russian=Russian
+settings.languages.english=English
+settings.time.system=Auto
+settings.time.12=12h
+settings.time.24=24h
 settings.windowTitle=Settings
 settings.general=General
 settings.general.language=Language
@@ -421,6 +429,7 @@ settings.chat.maxMessages=Message history size
 settings.chat.previews=Preview
 settings.chat.previewImages=Preview image URLs on mouse over
 settings.chat.colors=Colors
+settings.chat.timeFormat=Time format
 settings.chat.colorMode.default=Default: Use default colors for all users
 settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
 settings.chat.colorMode.random=Random: Every user has an unique, random color
