--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,6 +10,9 @@ bytesProgress={0} of {1}
 messageFromServer=Message from server
 more=More
 searchResult=Search result
+search=Search
+back=Back
+notAvailable=n/a
 
 view.tiles=Tiles
 view.table=Table
@@ -190,6 +193,37 @@ game.start.couldNotStart=The game could not be started. See error details below.
 game.full=Game is full
 game.full.action=Click to open game
 game.mods.twoAndMore={0} and {1,number,#} more
+game.id=ID
+game.time=When
+game.duration=Duration
+game.gameType=Mods
+game.startTime=Start time
+game.endTime=End time
+game.validity=Validity
+game.victoryCondition=Victory condition
+game.player.id=Player ID
+game.player.username=Player username
+game.player.faction=Player faction
+game.player.team=Player team
+game.player.startSpot=Player position
+game.player.score=Player score
+game.host.id=Host ID
+game.host.username=Host username
+game.map.folderName=Map folder name
+game.map.isRanked=Map is ranked
+game.map.displayName=Map name
+game.options=Game Options
+game.optionKey=Option
+game.optionValue=Value
+game.chat=Chat
+game.chat.gameTime=Game Time
+game.chat.sender=Sender
+game.chat.message=Message
+game.statistics=Statistics
+game.onMapFormat=on {0}
+game.downloadMoreInfo=Download more information ({0})
+featuredMod.displayName=Game mod name
+featuredMod.technicalName=Game mod short name
 
 ladder.searchPrompt=Search rank or player\u2026
 
@@ -211,19 +245,12 @@ vault.onlineReplays=Online Replays
 vault.localReplays=Local Replays
 vault.liveReplays=Live Replays
 vault.replays.loading=Loading replays
-vault.replays.excuse=A good replay vault heavily depends on server-side support, which isn't available yet. Therefore, the search options are rather limited. For now.
-vault.replays.searchMapTitle=Map
-vault.replays.searchPlayerTitle=Player
-vault.replays.searchFeaturedModTitle=Featured Mod
-vault.replays.searchMapPrompt=Search map name\u2026
-vault.replays.searchPlayerPrompt=Search player name\u2026
-vault.replays.mapSearchButton=Search by map
-vault.replays.playerSearchButton=Search by player
-vault.replays.modSearchButton=Search by mod
 vault.replays.newest=Most Recent
 vault.replays.highestRated=Highest Rated
 vault.replays.mostWatched=Most Watched
-
+vault.replays.displayQuery=Display search query
+vault.replays.queryPrompt=Build a query above or enter one manually
+vault.replays.searchError=An error has occurred while searching for replays.
 modVault.searchPrompt=Search\u2026
 modVault.title=Mod vault
 modVault.description=There are two different types of mods:\nUI (user interface) mods can improve the user interface and make it easier to control the game. Such mods are per-user and are allowed in any game.\nSim (simulation) mods affect the game's logic and therefore need to be installed by all participants. They can only be used in custom games.
@@ -290,6 +317,9 @@ map.players=Players
 map.version=Version
 map.reviews=Reviews
 map.updated=Updated
+map.maxPlayers=Max. players
+map.width=Width
+map.height=Height
 
 mapPreview.name=Map Name: {0}
 mapPreview.size={0,number,#}km x {1,number,#}km
@@ -301,14 +331,6 @@ replays.loadingLocalTask.title=Loading local replays\u2026
 replays.loadingLocalTask.failed=Local replays could not be loaded.
 replays.live.loadFailure.title=Live Replay Load Failure
 replays.live.loadFailure.message=The live replay has failed to launch
-
-replay.id=ID
-replay.title=Title
-replay.players=Players
-replay.time=When
-replay.duration=Duration
-replay.gameType=Mods
-replay.map=Map
 
 tutorial.map=Map
 tutorial.title=Title
@@ -492,3 +514,17 @@ friend.nowOfflineNotification.title={0} is now offline
 friend.joinedGameNotification.title={0} joined {1}
 friend.joinedGameNotification.action=Click here to join as well.
 game.watch=Watch
+query.equals=is
+query.notEquals=is not
+query.greaterThan=is greater than
+query.greaterThanEquals=is at least
+query.lessThan=is less than
+query.lessThanEquals=is at most
+query.in=is one of
+query.notIn=is none of
+query.and=and
+query.or=or
+query.addCriteria=Add criteria
+query.removeCriteria=Remove criteria
+query.valueHint=Value
+
