--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -308,8 +308,7 @@ replays.localReplays=Lokale replays
 replays.onlineReplays=Online replays
 replays.live.loadFailure.title=Live Replay Lade Fehler
 replays.live.loadFailure.message=Das live replay konnte nicht gestartet werden
-
-replay.id=ID
+game.id=ID
 replay.title=Titel
 replay.players=Spieler
 replay.time=Wann
