Fix #452 clan information toolip

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -124,7 +124,6 @@ chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
 chat.userContext.kick=Kick\u2026
 chat.userContext.ban=Ban\u2026
-chat.status.format=(%s)
 chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
 chat.clanTagFormat=[{0}]
@@ -139,6 +138,12 @@ chat.filter.username=Username
 chat.filter.minRating=Min Rating
 chat.filter.maxRating=Max Rating
 chat.operator=SYSTEM
+clan.clanName=Clan name
+clan.description=Description
+clan.leader=Leader
+clan.clanMembers=Members
+clan.messageLeader=Message clan leader
+clan.visitPage=Visit clan website
 chat.privateMessage.playerLeft={0} is now offline
 chat.privateMessage.playerReconnect={0} is back online
 chat.privateMessage.globalRating=Global rating
@@ -414,7 +419,6 @@ userInfo.ratingHistory.global=Global
 userInfo.achievements=Achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
-user.status.chatOnly=Chat only
 user.status.hosting=Hosting: {0}
 user.status.waiting=Waiting in: {0}
 user.status.playing=Playing: {0}
