That is supposed to be a perfect PR It introduces wonderful and working unit tests It is even more wonderful than it normally is :D fixes #480 closes #480

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -146,7 +146,8 @@ games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show password protected games
 games.noGamesAvailable=There are no open games. Why don't you create one?
 games.couldNotJoin=Game could not be joined. See error message below.
-
+game.create.connecting=Waiting for connection
+game.create.disconnected=Please connect
 game.create.map=Map
 game.create.title=Title (required)
 game.create.password=Password (Optional)
