Fix #182 (and cleanup) private message user detail

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -140,19 +140,15 @@ chat.filter.maxRating=Max Rating
 chat.operator=SYSTEM
 chat.privateMessage.playerLeft={0} is now offline
 chat.privateMessage.playerReconnect={0} is back online
-chat.privateMessage.gamestate.notInGame=Not in game
-chat.privateMessage.country=Country:
-chat.privateMessage.globalrating=Global rating:
-chat.privateMessage.leaderboardrating=Leaderboard rating:
-chat.privateMessage.ratingFormat={0,number,#} +/- {1,number,#}   ({2,number,#})
-chat.privateMessage.gamesPlayed=Games played:
-chat.privateMessage.game.players=Players:
-chat.privateMessage.game.playersFormat={0,number,#}/{1,number,#}
-chat.privateMessage.game.featuredMod=Featured mod:
-chat.privateMessage.game.host=Hosted by:
+chat.privateMessage.globalRating=Global rating
+chat.privateMessage.ladder1v1Rating=1v1 rating
+chat.privateMessage.ratingFormat={0,number,#}
+chat.privateMessage.gamesPlayed=Games played
+chat.privateMessage.game.players=Players
 chat.privateMessage.game.joinSpectateError.title=Error while starting game
-chat.privateMessage.game.joinSpectateError.text=Could not join/spectate game. Player isn't in game anymore!
-
+chat.privateMessage.game.joinSpectateError.text=Could not join/spectate game. Player isn't in game anymore.
+chat.privateMessage.achievements.unlocked=Achievements unlocked
+chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 
 games.create=Create game
 games.create.minRating=Min.
