Improve chat look and feel

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -124,6 +124,7 @@ chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
 chat.userContext.kick=Kick\u2026
 chat.userContext.ban=Ban\u2026
+chat.status.format=(%s)
 chat.sendMessageTask.title=Sending chat message\u2026
 chat.sendActionTask.title=Sending chat action\u2026
 chat.clanTagFormat=[{0}]
@@ -144,6 +145,7 @@ chat.privateMessage.globalRating=Global rating
 chat.privateMessage.ladder1v1Rating=1v1 rating
 chat.privateMessage.ratingFormat={0,number,#}
 chat.privateMessage.gamesPlayed=Games played
+chat.privateMessage.currentlyPlaying=Currently playing
 chat.privateMessage.game.players=Players
 chat.privateMessage.game.joinSpectateError.title=Error while starting game
 chat.privateMessage.game.joinSpectateError.text=Could not join/spectate game. Player isn't in game anymore.
@@ -412,6 +414,7 @@ userInfo.ratingHistory.global=Global
 userInfo.achievements=Achievements
 userInfo.tooltipFormat={0} ({1,number,#})
 userInfo.ratingFormat=Global Rating: {0,number,#}\nLeaderboard Rating: {1,number,#}
+user.status.chatOnly=Chat only
 user.status.hosting=Hosting: {0}
 user.status.waiting=Waiting in: {0}
 user.status.playing=Playing: {0}
