Fix #74 map vault

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -231,8 +231,8 @@ game.player.startSpot=Player position
 game.player.score=Player score
 game.host.id=Host ID
 game.host.username=Host username
-game.map.height=Map height
-game.map.width=Map width
+game.map.height=Map height (in px)
+game.map.width=Map width (in px)
 game.map.version=Map version
 game.map.folderName=Map folder name
 game.map.isRanked=Map is ranked
@@ -283,6 +283,7 @@ vault.replays.mostWatched=Most Watched
 vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
+vault.more=More\u2026
 modVault.searchPrompt=Search\u2026
 modVault.title=Mod vault
 modVault.description=There are two different types of mods:\nUI (user interface) mods can improve the user interface and make it easier to control the game. Such mods are per-user and are allowed in any game.\nSim (simulation) mods affect the game's logic and therefore need to be installed by all participants. They can only be used in custom games.
@@ -332,26 +333,32 @@ mapVault.searchPrompt=Search\u2026
 mapVault.mostLikedMaps=Most liked
 mapVault.newestMaps=Most recent
 mapVault.mostPlayed=Most played
-mapVault.install=Install
+mapVault.installButtonFormat=Install ({0})
 mapVault.uninstall=Uninstall
+mapVault.loadError=Maps could not be loaded. See the error message below.
 
 mod.description=Description
 mod.comments=Comments
-
+map.author=Author
+map.unknownAuthor=Unknown author
 map.name=Name
 map.description=Description
 map.size=Size
 map.rating=Rating
 map.players=Players
 map.version=Version
+map.folderName=Folder name
+map.ranked=Ranked
 map.reviews=Reviews
 map.updated=Updated
 map.maxPlayers=Max. players
-map.width=Width
-map.height=Height
+map.width=Width (in px)
+map.height=Height (in px)
+map.uploadedDateTime=Uploaded date/time
+map.updatedDateTime=Updated date/time
 
 mapPreview.name=Map Name: {0}
-mapPreview.size={0,number,#}km x {1,number,#}km
+mapPreview.size={0,number,#} x {1,number,#}
 mapPreview.loadFailure.message=Map preview could not be loaded
 
 replays.loadingOnlineTask.title=Loading online replays\u2026
