Reveal logs folder. Fixes #512. Reveal maps folder. Fixes #513. Reveal mods folder. Fixes #514.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -27,6 +27,9 @@ menu.support=Support
 menu.feedback=Feedback
 menu.exit=Exit
 menu.settings=Settings
+menu.revealMapFolder=Reveal map folder
+menu.revealLogFolder=Reveal log folder
+menu.revealModFolder=Reveal mod folder
 
 main.community.news=News
 main.chat=Chat
