--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -524,6 +524,10 @@ view.table=Tabelle
 
 userMenu.showProfile=Zeige Profil
 
+menu.revealMapFolder=Kartenverzeichnis öffnen
+menu.revealLogFolder=Log-Verzeichnis öffnen
+menu.revealModFolder=Mod-Verzeichnis öffnen
+
 main.leaderboards=Rangliste
 //Still=needs to be translated:
 leaderboard.ranked1v1=1v1 Rating
