#524 reinstate old connectivity code

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -101,6 +101,13 @@ statusBar.fafDisconnected=FAF disconnected
 statusBar.reconnect=Reconnect
 statusBar.taskWithoutMessage.format={0}
 statusBar.taskWithMessage.format={0}: {1}
+statusBar.connectivityPublic=Public connection
+statusBar.connectivityStun=Proxy connection
+statusBar.portUnreachable=Port unreachable
+statusBar.connectivityUnknown=Connectivity unknown
+statusBar.retry=Retry
+statusBar.help=Help
+statusBar.checkingPort=Checking port\u2026
 
 news.authoredFormat={0} on {1,date}
 
@@ -598,6 +605,16 @@ mod.filename=Filename
 mod.version=Version
 UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyUrl=Copy replay URL
+replay.copyLink=Copy link
+portCheckTask.tryingUpnp=Trying UPnP port forwarding\u2026
+portCheckTask.title=Checking port reachability\u2026
+portCheckTask.unreachableNotification=Your game port ({0,number,#}) is unreachable
+portCheckTask.neverShowAgain=Never show again
+portCheckTask.help=Help
+portCheckTask.retry=Retry
+portCheckTask.serverUnreachable=Port check failed
+portCheckTask.portOccupied=Your game port {0} is occupied. Do you have another client running?
+
 game.showRatingChange=Show rating change
 game.notValid=The Game was not rated
 game.notRatedYet=Rating change is not yet available
@@ -647,3 +664,5 @@ tournament.openOnChallonge=Open on challonge.com
 tournament.gameType=Game type:
 tournament.startingAt=Starting at:
 tournament.completedAt=Completed at:
+
+game.create.connectivityCheckPending=Connecting
