Fixes #528 by opening an Immediate Notifcation displaying the error...

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -375,7 +375,6 @@ friend.joinedGameNotification.action=Klicke hier, um ebenfalls beizutreten.
 
 more=Mehr
 searchResult=Suchergebnis
-
 view.tiles=Kacheln
 view.table=Tabelle
 
@@ -566,3 +565,4 @@ updater.downloadingFile=Lade {0} herunter
 updater.patchingFile=Patche {0}
 achievement.stepsFormat={0,number,#}/{1,number,#}
 urlPreviewDescription={0} ({1})
+UIDNotExecuted=UID executable konnte nicht ausgeführt werden. Sie wurde möglicherweise entfernt, nicht gefunden oder der Zugriff verweigert.
