--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -559,3 +559,4 @@ reviewScore.four=4
 reviewScore.three=3
 reviewScore.two=2
 reviewScore.one=1
+UIDNotExecuted=UID binary could not be executed. It might have been removed, not found or inaccessible.
