--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -22,8 +22,6 @@ view.table=Table
 userMenu.logOut=Log out
 userMenu.showProfile=Show profile
 
-menu.login=Login
-menu.support=Support
 menu.feedback=Feedback
 menu.exit=Exit
 menu.settings=Settings
@@ -51,8 +49,6 @@ coop.host.title=Host this Mission
 coop.host.button=Host Game
 coop.leaderboard=Leaderboard
 coop.openGames=Open Games
-coop.players=Players
-coop.time=Time
 coop.leaderboard.rank=#
 coop.leaderboard.players=Players
 coop.leaderboard.names=Names
@@ -70,8 +66,6 @@ ranked1v1.play=Play
 ranked1v1.cancel=Cancel
 ranked1v1.choseFactions.title=Select factions
 ranked1v1.choseFactions.description=When the match starts, one of your selected factions will be assigned to you.
-ranked1v1.title=Ranked 1v1 matches
-ranked1v1.description=This is 1v1 matchmaker system. Here you can test your skills against other players in balanced 1v1 matches.
 ranked1v1.rating.title=Your rating
 ranked1v1.rankingDistribution=Rating distribution
 ranked1v1.rankingDistribution.x=Rating
@@ -83,7 +77,7 @@ ranked1v1.ratingHint.good=Your rating is good. Focus on details to improve.
 ranked1v1.ratingHint.high=Your rating is high. Why not help others to improve?
 ranked1v1.ratingHint.top=Congratulations! You're a top player. Share your knowledge.
 ranked1v1.gamesPlayed=Games played
-ranked1v1.ranking=Your ranking
+ranked1v1.ranking=Your rank
 ranked1v1.rankingOutOf=out of {0,number,#} players
 ranked1v1.searching=Searching for opponent\u2026
 ranked1v1.winLossRation=Win/loss ratio
@@ -115,13 +109,13 @@ chat.category.others=Others
 chat.category.chatOnly=Chat only
 chat.userContext.noAvatar=No avatar
 chat.userContext.userInfo=Show user info
-chat.userContext.privateMessage=Send private message
+chat.userContext.privateMessage=Private message
 chat.userContext.removeColor=Remove custom color
 chat.userContext.addFriend=Add friend
 chat.userContext.removeFriend=Remove friend
 chat.userContext.addFoe=Add foe
 chat.userContext.removeFoe=Remove foe
-chat.userContext.viewLiveReplay=View live replay
+chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
@@ -138,10 +132,10 @@ chat.filter.prompt=Search in channel
 
 chat.filter.clan=Clan
 chat.filter.username=Username
-chat.filter.minRating=Min Rating
-chat.filter.maxRating=Max Rating
+chat.filter.minRating=Min. Rating
+chat.filter.maxRating=Max. Rating
 chat.operator=SYSTEM
-clan.clanName=Clan name
+clan.clanName=Name
 clan.description=Description
 clan.leader=Leader
 clan.clanMembers=Members
@@ -155,8 +149,6 @@ chat.privateMessage.ratingFormat={0,number,#}
 chat.privateMessage.gamesPlayed=Games played
 chat.privateMessage.currentlyPlaying=Currently playing
 chat.privateMessage.game.players=Players
-chat.privateMessage.game.joinSpectateError.title=Error while starting game
-chat.privateMessage.game.joinSpectateError.text=Could not join/spectate game. Player isn't in game anymore.
 chat.privateMessage.achievements.unlocked=Achievements unlocked
 chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 
@@ -170,7 +162,7 @@ game.create.connecting=Waiting for connection
 game.create.disconnected=Please connect
 game.create.map=Map
 game.create.title=Title (required)
-game.create.password=Password (Optional)
+game.create.password=Password (optional)
 game.create.randomMap=Random map
 game.create.defaultGameType=Select default
 game.create.rating=Desired rating
@@ -200,34 +192,33 @@ game.detail.players.format={0,number,#}/{1,number,#} players
 game.join=Join
 game.cancel=Cancel
 game.host=Host
-game.spectate=Spectate
 game.tooltip.teamTitle=Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam=No Team
 game.tooltip.observers=Observers
 game.protected.symbol=\uF023
 game.join.passwordPrompt=Enter game password
-game.join.passwordWrong=The last password was incorrect.
+game.join.passwordWrong=Incorrect password
 game.start.couldNotStart=The game could not be started. See error details below.
 game.full=Game is full
 game.full.action=Click to open game
 game.mods.twoAndMore={0} and {1,number,#} more
-game.gameStatus=Game Status
+game.gameStatus=Game status
 game.gameStatus.playing=Playing
-game.gameStatus.lobby=In lobby
+game.gameStatus.lobby=Waiting for game to start
 game.gameStatus.none=None
 game.id=ID
 game.time=When
 game.duration=Duration
-game.gameType=Mods
+game.gameType=Game type
 game.startTime=Start time
 game.endTime=End time
 game.validity=Validity
 game.victoryCondition=Victory condition
 game.player.id=Player ID
-game.player.username=Player username
+game.player.username=Player name
 game.player.faction=Player faction
 game.player.team=Player team
-game.player.startSpot=Player position
+game.player.startSpot=Player start position
 game.player.score=Player score
 game.host.id=Host ID
 game.host.username=Host username
@@ -241,12 +232,11 @@ game.options=Game Options
 game.optionKey=Option
 game.optionValue=Value
 game.chat=Chat
-game.chat.gameTime=Game Time
+game.chat.gameTime=Game time
 game.chat.sender=Sender
 game.chat.message=Message
-game.statistics=Statistics
 game.onMapFormat=on {0}
-game.onUnknownMap=on unknown map
+game.onUnknownMap=on an unknown map
 game.downloadMoreInfo=Download more information ({0})
 game.watch=Watch
 game.watchButtonFormat=Watch ({0})
@@ -260,15 +250,13 @@ featuredMod.technicalName=Game mod short name
 ladder.searchPrompt=Search rank or player\u2026
 
 login.title=FA Forever Login
-login.header=Welcome back, commander
 login.name=Username
 login.password=Password
 login.autoLogin=Automatic login
-login.create=New Account
+login.create=Create Account
 login.forgot=Forgot login
 login.button.login=Login
 login.button.cancel=Cancel
-login.failed.title=Login failed
 login.progress.message=Logging in\u2026
 
 vault.maps=Maps
@@ -276,7 +264,7 @@ vault.mods=Mods
 vault.onlineReplays=Online Replays
 vault.localReplays=Local Replays
 vault.liveReplays=Live Replays
-vault.replays.loading=Loading replays
+vault.replays.loading=Loading replays\u2026
 vault.replays.newest=Most Recent
 vault.replays.highestRated=Highest Rated
 vault.replays.mostWatched=Most Watched
@@ -285,15 +273,12 @@ vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
 vault.more=More\u2026
 modVault.searchPrompt=Search\u2026
-modVault.title=Mod vault
-modVault.description=There are two different types of mods:\nUI (user interface) mods can improve the user interface and make it easier to control the game. Such mods are per-user and are allowed in any game.\nSim (simulation) mods affect the game's logic and therefore need to be installed by all participants. They can only be used in custom games.
 modVault.newestMods=Most recent
 modVault.popularMods=Most downloaded
 modVault.mostLikedMods=Most liked
 modVault.recommendedUidMods=Recommended UI mods
 modVault.install=Install
 modVault.uninstall=Uninstall
-modVault.cancel=Cancel
 modVault.installationFailed=Mod ''{0}'' could not be installed: {1}
 modVault.couldNotDeleteMod=Mod ''{0}'' could not be deleted: {1}
 modVault.loadingMods=Loading mods\u2026
@@ -305,21 +290,21 @@ modVault.upload.modVersion=Version
 modVault.upload.modUid=UID
 modVault.upload.uploadNow=Upload now
 modVault.upload.uploading=Uploading mod\u2026
-modVault.upload.complete=Upload complete!
+modVault.upload.complete=Upload complete
 modVault.upload.failed=Mod upload failed. Server gave the following errors:\n\n{0}
 modVault.upload.retry=Retry
 modVault.upload.compressing=Compressing mod\u2026
 
 mapVault.upload.title=Upload map
-mapVault.upload.hint=Values are read from *_scenario.lua
+mapVault.upload.hint=Values were read from *_scenario.lua
 mapVault.upload.mapVersion=Version
 mapVault.upload.reading=Reading map\u2026
 mapVault.upload=Upload map\u2026
 mapVault.upload.uploadNow=Upload now
 mapVault.upload.uploading=Uploading map\u2026
 mapVault.upload.compressing=Compressing map\u2026
-mapVault.upload.complete=Upload complete!
-mapVault.upload.complete.hint=WARNING: Since the server may rename your files, it's strongly recommended that you remove your map from the map folder and instead install it using the map vault.
+mapVault.upload.complete=Upload complete
+mapVault.upload.complete.hint=WARNING: Since the server may have renamed your files, it's strongly recommended that you remove your map from the map folder and instead install it using the map vault.
 mapVault.upload.failed=Map could not be uploaded. Server gave the following errors:\n\n{0}
 mapVault.upload.mapSize=Size
 mapVault.upload.players=Players
@@ -365,7 +350,7 @@ replays.loadingOnlineTask.title=Loading online replays\u2026
 replays.loadingOnlineTask.failed=Online replays could not be loaded.
 replays.loadingLocalTask.title=Loading local replays\u2026
 replays.loadingLocalTask.failed=Local replays could not be loaded.
-replays.live.loadFailure.title=Live Replay Load Failure
+replays.live.loadFailure.title=Could not load live replays
 replays.live.loadFailure.message=The live replay has failed to launch
 
 tutorial.map=Map
@@ -378,10 +363,6 @@ updater.binary.taskTitle=Preparing game files
 updater.git.progressFormat={0} ({1,number,#}/{2,number,#})
 updater.git.checkingOut=Preparing game files
 updater.git.taskTitle=Downloading game files
-
-faUpdateAvailable.notification=A Forged Alliance update is available
-
-faUpdateSucceeded.notification=Forged Alliance has been updated
 
 clientUpdateAvailable.notification=Client {0} is available ({1})
 clientUpdateAvailable.downloadAndInstall=Download
@@ -399,9 +380,8 @@ downloadingModTask.unzipping=Unzipping mod to {0}
 
 missingGamePath.notification=Forged Alliance could not be located
 missingGamePath.locate=Locate\u2026
-missingGamePath.chooserTitle=Locate Forged Alliance directory
+missingGamePath.chooserTitle=Locate the Forged Alliance directory
 
-loadingInstalledModsFailed.notification=Installed mods could not be determined: {0}
 notifications.empty=You don't have any notifications
 
 stats.air=Air
@@ -447,11 +427,9 @@ corruptedMods.show=Show
 
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
-mapNotFound=Map {0} could not be found on the server nor on this computer.
+mapNotFound=Map ''{0}'' could not be found on the server nor on this computer.
 replayCouldNotBeStarted=Replay {0,number,#} could not be started. See error message below.
 liveReplayCouldNotBeStarted=Live replay could not be started. See error message below.
-replayCouldNotBeDownloaded=Replay {0,number,#} could not be downloaded. See details below.
-
 duration.seconds={0,number,#}s
 duration.minutesSeconds={0,number,#}min {1,number,#}s
 duration.hourMinutes={0,number,#}h {1,number,#}min
@@ -482,7 +460,7 @@ settings.time.24=24h
 settings.windowTitle=Settings
 settings.general=General
 settings.general.language=Language
-settings.general.rememberLastTab=Remember my last tab
+settings.general.rememberLastTab=Remember my last opened tab
 settings.chat=Chat
 settings.chat.maxMessages=Message history size
 settings.chat.previews=Preview
@@ -512,8 +490,8 @@ settings.fa.title=Forged Alliance Forever
 settings.fa.gameConfiguration=Game configuration
 settings.fa.autoDownloadMaps=Download missing maps automatically
 settings.fa.gamePort=Game port
-settings.fa.gameLocation=Game location (e. g. "C\:\\Games\\Supreme Commander - Forged Alliance")
-settings.fa.executableDecorator=Command line decoration for executable
+settings.fa.gameLocation=Game location (e. g. "C:\\\\Games\\\\Supreme Commander - Forged Alliance")
+settings.fa.executableDecorator=Command line format for executable
 settings.fa.executionDirectory=Execution directory
 settings.fa.advanced=Advanced
 settings.fa.useDefault=Use default directory
@@ -526,14 +504,13 @@ settings.notifications.friendOffline=Friend offline
 settings.screenFormat=Screen {0,number,#}
 settings.account=Account
 settings.account.changePassword=Change Password
-settings.account.title=Change Password
 settings.account.currentPassword=Current Password
 settings.account.currentPassword.empty=The current password must not be empty.
 settings.account.newPassword=New Password
 settings.account.newPassword.empty=The new password must not be empty.
 settings.account.confirmPassword=Confirm Password
 settings.account.confirmPassword.mismatch=The new password and the confirmation do not match.
-settings.account.changePassword.changing=Your password is being changed.
+settings.account.changePassword.changing=Your password is being changed\u2026
 settings.account.changePassword.success=Your password was changed.
 settings.account.changePassword.error=Your password was not changed due to an error ({0}).
 settings.account.steamAccount=Steam Account Linking
