Fixes #495 Fixes #133 needs further improvment

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -597,3 +597,4 @@ mapVault.mostPlayed=Meist gespielt
 minuteAgo=Vor {0,number,#} Minuten
 hourAgo=Vor {0,number,#} Stunden
 monthAgo=Vor {0,number,#} Monaten
+chat.popOutTab=seperat anzeigen
