Allow users to configure if they want notifications for non-@-mentions.

--- a/src/main/resources/i18n/messages_de_DE.properties
+++ b/src/main/resources/i18n/messages_de_DE.properties
@@ -460,6 +460,8 @@ settings.chat.colorMode.custom=Angepasst: Benutze spezielle Farben für manche Be
 settings.chat.colorMode.random=Zufall: Jeder Benutzer bekommt seine eigene Farbe
 settings.chat.foes=Foes
 settings.chat.hideFoe=Verstecke foe Nachrichten
+settings.chat.notifyOnAtMention=Nur bei Erwähnungen über @username benachrichtigen. 
+settings.chat.notifications=Benachrichtigungen
 settings.notifications=Nachrichten
 settings.notifications.enableNotifications=Erlaube Nachrichten
 settings.notifications.toastPosition=Nachrichtenposition
