--- a/src/main/resources/i18n/messages_ru_RU.properties
+++ b/src/main/resources/i18n/messages_ru_RU.properties
@@ -1,2 +1,2 @@
 settings.chat.notifications=Notifications
-settings.chat.notifyOnAtMention=Only notifiy when mentioned via @username. 
+settings.chat.notifyOnAtMentionOnly=Only notifiy when mentioned via @username.
